[#51] FXML Convention: Consider use dedicated properties files
- Resource handling fixes
- SimpleEventHandlerProperty
- Clean-ups

--- a/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-docking/src/main/resources/org/drombler/commons/fx/samples/docking/BottomTestPane.fxml
+++ b/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-docking/src/main/resources/org/drombler/commons/fx/samples/docking/BottomTestPane.fxml
@@ -7,5 +7,5 @@
 <?import org.drombler.commons.fx.docking.*?>
 
 <fx:root type="DockablePane" xmlns:fx="http://javafx.com/fxml">
-    <Label text="%BottomTestPane.Label.text"/>
+    <Label text="%label.text"/>
 </fx:root>
