--- a/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-docking/src/main/resources/org/drombler/commons/fx/samples/docking/TopTestPane.fxml
+++ b/drombler-commons-fx/drombler-commons-fx-samples/drombler-commons-fx-samples-docking/src/main/resources/org/drombler/commons/fx/samples/docking/TopTestPane.fxml
@@ -7,5 +7,5 @@
 <?import org.drombler.commons.fx.docking.*?>
 
 <fx:root type="DockablePane" xmlns:fx="http://javafx.com/fxml">
-    <Label text="%TopTestPane.Label.text"/>
+    <Label text="%label.text"/>
 </fx:root>
