#94 In editor Docking Area: mark modified Dockables - FXDockableData: modified property

--- a/drombler-commons-fx/drombler-commons-fx-docking/src/main/resources/org/drombler/commons/fx/docking/impl/skin/modena/modena.css
+++ b/drombler-commons-fx/drombler-commons-fx-docking/src/main/resources/org/drombler/commons/fx/docking/impl/skin/modena/modena.css
@@ -61,6 +61,11 @@
 .docking-area-pane { 
     -fx-skin: "org.drombler.commons.fx.docking.impl.skin.DockingAreaPaneSkin";
 }
+
+.dockable-modified {
+    -fx-font-weight: bold;
+}
+
 /*.docking-area-pane .tab-content-area {
     -fx-background-color: blue;
 }*/
